--- a/npmtea/package.json
+++ b/npmtea/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npmtea",
-  "version": "1.0.0",
+  "version": "1.1.5",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -22,5 +22,20 @@
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.2"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hkia2/npmteaa.git"
+  },
+  "keywords": [
+    "npmteaa"
+  ],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hkia2/npmteaa/issues"
+  },
+  "homepage": "https://github.com/hkia2/npmteaa#readme"
 }
